--- a/server/src/templates/preview.ejs
+++ b/server/src/templates/preview.ejs
@@ -14,11 +14,8 @@
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="<%= name || "Project Viewer" %>">
-    <meta
-      name="twitter:description"
-      content="Check out this amazing project!"
-    />
+    <meta name="twitter:title" content="<%= name %>" />
+    <meta name="twitter:description" content="<%= description %>" />
     <meta name="twitter:image" content="<%= image %>" />
 
     <style>
