--- a/server/src/templates/preview.ejs
+++ b/server/src/templates/preview.ejs
@@ -66,7 +66,7 @@
     <div id="project-content"><%- htmlContent %></div>
     <div id="project-footer">
       <p>© ѣ 2025</p>
-      <p>powered by <a href="https://js2go.ru" target="_blank">js2go.ru</a></p>
+      <p>powered by <a href="<%= projectUrl %>" target="_blank">js2go.ru</a></p>
       <a href="https://github.com/mikhail-angelov/playground" target="_blank">
         <svg
           xmlns="http://www.w3.org/2000/svg"
